    structure is invalid.
    
  - There is a new virtual function on an SBase object 'setElementText'
    that will allow a user to read/write and manipulate text within an 
    XML element.
    
* Bug fixes

  - The conversion code incorrectly converted an L3 model where the
    stoichiometry was changed by a RateRule.  This has been fixed.
    
  - The RegisterConverters class was not included in the
    LIBSBML_CPP_NAMESPACE.  This has been corrected.  Thanks to
    Christoph Flamm for letting us know.
    
  - Tracker issue #3438777
    The XercesParser was failing to find the line and column number
    definitions with some compilers. This is now fixed.  Thanks to
    David Fange for reporting it.
    
  - Tracker issue #3441615
    There was an issue with SWIG, C# and MSVC compilers caused by 
    conflict with MS MFC and GDI classes.  This has been fixed by 
    explicilty excluding these classes.  Thanks to  Totte Karlsson 
    for reporting this.
   


* Miscellaneous


* Configuration/build system changes

EXPERIMENTAL

* New features

    
* Bug fixes


* Miscellaneous


* Configuration/build system changes

======================================================================
Version 5.2.0 (2011-11-11)
======================================================================

* Download directory structure

  - Prior to this release we have provided stable libSBML source 
    code and associated binary installers, but only provided the 
    source code of the L3 packages that are in beta development. 
    In response to requests to provide binaries including the package 
    code, we have slightly reorganised the directory structure of 
    the 5.2.0 release.

    The top level directory remains as expected

    https://sourceforge.net/projects/sbml/files/libsbml/5.2.0 

    This directory contains two sub-directories 'stable' and 
    'experimental'.

    1) files/libsbml/5.2.0/stable

    This directory contains the source code and various binary 